# render_cpp

./: CMakeLists.txt  Scene.cpp  main.cpp
src/: Camera.cpp  Camera.h  ObjectManager.cpp  ObjectManager.h  PathTrace.cpp  PathTrace.h  World.cpp  World.h
src/helpers/: Ray.cpp  Ray.h
src/objects/: ObjectBase.cpp  ObjectBase.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
src/utils/: BRDF.cpp  BRDF.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  Ray.cpp  Ray.h  ThreadPool.h
